k8s/base/00-namespace-rbac.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hospital-ml
