k8s/base/patch-shared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: hospital-ml
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
      containers:
        - name: ui
          image: saikeerthan06/ui:2.2.0
          imagePullPolicy: Always
          args:
            - streamlit
            - run
            - ui/app.py
            - --server.port=8501
            - --server.address=0.0.0.0
            - --browser.gatherUsageStats=false
          ports:
            - containerPort: 8501
          volumeMounts:
            - name: shared
              mountPath: /shared
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-preprocessing
  namespace: hospital-ml
  labels:
    app: data-preprocessing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-preprocessing
  template:
    metadata:
      labels:
        app: data-preprocessing
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 10001
      containers:
        - name: data-preprocessing
          image: saikeerthan06/data-preprocessing:2.1.1
          imagePullPolicy: Always
          workingDir: /app
          command: ["python"]
          args: ["-u","data_preprocessing/service.py"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared
              mountPath: /shared
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-pvc
