k8s/base/04-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-to-backends
  namespace: hospital-ml
spec:
  podSelector:
    matchLabels:
      app: data-preprocessing
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ui
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-to-training
  namespace: hospital-ml
spec:
  podSelector:
    matchLabels:
      app: model-training
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ui
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-to-inference
  namespace: hospital-ml
spec:
  podSelector:
    matchLabels:
      app: model-inference
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ui
